tests/positive/rule1_return.safe
-- Test: rule1_return
-- Description: Function return with range narrowing.
--   Shows that the returned value is provably within the return type's
--   range at every return point in the function.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.1.p127:d5d93439
-- Clause: SAFE@468cf72:spec/05-assurance.md#5.3.6.p25:e8253bd7
-- Expected: ACCEPT

package safe_return

   subtype bounded is integer (-500 to 500);
   subtype small is integer (-10 to 10);

   --  Signum: returns -1, 0, or 1 depending on sign.
   --  Every return path yields a value in -10..10.
   function signum (v : bounded) returns small

      if v > 0
         --  Narrowing point (return): 1 is in -10..10.
         return 1;
      else if v < 0
         --  Narrowing point (return): -1 is in -10..10.
         return -1;
      else
         --  Narrowing point (return): 0 is in -10..10.
         return 0;

   --  Bounded_Add: adds two Small values. The sum of two values
   --  each in -10..10 is in -20..20, which fits in Bounded.
   function bounded_add (a, b : small) returns bounded

      --  Narrowing point (return): A + B is in -20..20, within -500..500.
      return bounded (a) + bounded (b);

