tests/negative/neg_rule1_index_fail.safe
-- Test: neg_rule1_index_fail
-- Description: Array indexing where the index is from a wider type.
--   The index value is derived from an unconstrained computation,
--   so the narrowing to the index type cannot be proven safe.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.1.p127:d5d93439
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.2.p131:30aba5f5
-- Expected: REJECT narrowing_check_failure

package index_narrow_fail

   subtype idx is integer (1 to 10)
   type values is array (idx) of integer

   --  Index_From_Computation: uses result of arbitrary arithmetic as index.
   --  A + B can produce any value in -20_000..20_000; not provably in 1..10.
   function index_from_computation (arr : values;
                                    a, b : integer) returns integer

      return arr (idx (a + b))  -- ERROR: A + B may not be in 1..10

